--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# ignore server configuration
+*/env/development.js
+*.azcli
+
 # Logs
 logs
 *.log
@@ -57,3 +61,49 @@ typings/
 # dotenv environment variables file
 .env
 
+# See http://help.github.com/ignore-files/ for more about ignoring files.
+
+# ignore server configuration
+env/development.js
+docker-compose.local.yml
+*.azcli
+
+# compiled output
+/dist
+/tmp
+/out-tsc
+
+# IDEs and editors
+/.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+# misc
+/.sass-cache
+/connect.lock
+/coverage
+/libpeerconnection.log
+npm-debug.log
+testem.log
+/typings
+
+# e2e
+/e2e/*.js
+/e2e/*.map
+
+# System Files
+.DS_Store
+Thumbs.db
+
+#.vscode
