--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-heroes",
+  "name": "vue-cosmosdb",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,7 +8,9 @@
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
     "debug": "node --inspect index.js",
-    "start": "node index.js"
+    "start": "node index.js",
+    "docker-up": "docker-compose up -d --build",
+    "docker-up-debug": "docker-compose -f docker-compose.debug.yml up -d --build"
   },
   "keywords": [],
   "author": "",
