--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "scripts": {
     "dev-proxy": "concurrently \"npm start\" \"npm run dev\"",
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
+    "dev": "webpack-dev-server --open --hot",
+    "dev-old": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
+    "build": "webpack --progress --hide-modules",
+    "build-old": "cross-env NODE_ENV=production webpack --progress --hide-modules",
     "debug": "concurrently \"node --inspect-brk index.js\" \"npm run dev\"",
     "start": "node index.js",
     "docker-up": "docker-compose up -d --build",
@@ -18,7 +20,6 @@
   "dependencies": {
     "axios": "^0.17.0",
     "body-parser": "^1.18.2",
-    "concurrently": "^3.5.0",
     "css-loader": "^0.28.7",
     "express": "^4.16.2",
     "mongoose": "^4.13.0",
@@ -28,6 +29,7 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
+    "concurrently": "^3.5.0",
     "cross-env": "^5.0.5",
     "file-loader": "^1.1.4",
     "node-sass": "^4.5.3",
